package kedinet.kedinet.model.enums;

public enum CanLiveWith {
    CALM_PEOPLE_ONLY,
    CHILDREN,
    DOGS,
    CATS
}
